ImageCrop only checks center when crop is defined by its center
Until now, ImageCrop would check if the center of a crop is blank or not in
any case. This check makes sense when the crop is defined by its center
(for example from a catalog), but when the crop isn't defined by its center
(for example with the `--section', or `--polygon' options) this behavior
can be annoying and cause unexpected behavior.

Also, until now, you could only confirm if the crop's center was filled or
not (and thus the file was created or not) from the `0' or `1' value in the
third column of the log file or on stdout. The log file does have comments,
but on stdout, this was rather cryptic and not intuitively understood. As
suggested by Mosè in task #14318 this could also cause confusions.

Also, until now `--checkcenter' would only take values `>=3', so, to
disable checking we needed another option (`--keepblankcenter'). But now,
`--checkcenter=0' means that no center checking will be done. Therefore the
old `--keepblankcenter' option is no longer needed and was removed. Infact,
the default value of `--checkcenter' was set to `0' so by default no center
checking will be done. Only if the user explicitly gives it a larger value
on the command-line or in their configuration files will it be
activated. This is done based on the principle of least astonishment: for a
new user, not having an output is a strange behavior (even it is is
beneficial for them). After they learn about it, they can use it.

Finally, the appropriate sections of the book were reviewed to reflect this
new behavior. Most of these sections had not been changed from the time
they were created and were outdated (even before this commit). This has
been corrected now.

Other corrections that were done as part of this task are:

 - The `iscenterfilled' function of `crop.c' would go on trying to find
   blank values in the central region. However, CFITSIO already outputs the
   `anynul' variable for the same purpose. To be fair

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -6437,104 +6437,120 @@ image processing, see @ref{Crop section syntax}.
 
 @node ImageCrop modes, Crop section syntax, ImageCrop, ImageCrop
 @subsection ImageCrop modes
-In order to be as comprehensive as possible, ImageCrop has two major
-modes of operation listed below.
+In order to be as comprehensive as possible, ImageCrop has two major modes
+of operation, using pixel coordinates, or the world coordinate system (WCS)
+coordinates. In each mode, there are multiple ways to define the crop(s):
+by center, or from vertices. Here, the options that define each specific
+mode are also mentioned as part of each class. For the full list of
+options, please see @ref{Invoking astimgcrop}.
+
+In all cases except the @option{--section} option, the values/coordinates
+are read as floating point numbers (not integers). When the crop is defined
+by its center, the respective (integer) central pixel position will be
+found internally according to the FITS standard (where the center of a
+pixel is defined to be an integer). To have this pixel positioned in the
+center of the cropped region, the final cropped region must have (in Image
+mode), or will have (in WCS mode) an add number of pixels.
 
 @table @asis
 @item Image
-The image mode uses the pixel coordinates. Depending on your command
-line options, this mode consists of three sub-modes. In image mode,
-only one image may be input.
-@itemize
+In image mode, ImageCrop uses the pixel coordinates/positions (instead of
+world coordinates). In image mode, only one image may be input. The crop(s)
+can be defined in multiple ways as listed below.
 
-@item
-Catalog (multiple crops). Coordinates are read from a text file. The
-@option{--xcol} and @option{--ycol} columns in the catalog are
-interpreted as the center of a square crop box whose width is
-specified with the @option{--iwidth} option in pixels. Since the given
-pixel has to be on the center, the width has to be an odd number, so
-if you give an even number for the width, it will be added by one. If
-a catalog file name is provided (with @option{--imagemode} activated
-of course) this mode will be used.
+@table @asis
+@item Center of multiple crops (in a catalog)
+The center of (possibly multiple) crops are read from a text file. A
+catalog can also contain WCS coordinates, so @option{--imgmode} has to be
+called/activated. The @option{--xcol} and @option{--ycol} columns in the
+catalog are interpreted as the center of a square crop with a width of
+@option{--iwidth} pixels (an odd number). The columns can contain any
+floating point value.
 
-@item
-Center (one crop). The box center is given on the command-line with
-the @option{--xc} and @option{--yc} parameters. The image width is
-similar to above.
+@item Center of a single crop (on the command-line)
+The center of the crop is given on the command-line with the @option{--xc}
+and @option{--yc} options. The crop width is specified by the
+@option{--iwidth} option. The given coordinates can be any floating point
+and the width has to be an odd integer, see the explanations above.
 
-@item
-Section (one crop). You can specify the section of pixels along each
-axis in the image which you want to be cropped with the
-@option{--section} option. See @ref{Crop section syntax} for a full
-explanation on the syntax of specifying the desired region.
-@end itemize
+@item Vertices of a single crop
+In Image mode there are two options to define the vertices of a region to
+crop: @option{--section} and @option{--polygon}. The former is lower-level
+(doesn't accept floating point vertices, and only a rectangular region can
+be defined), it is also only available in Image mode. Please see @ref{Crop
+section syntax} for a full description of this method.
 
-The latter two cases will only have one crop box. In both cases,
-ImageCrop will go into the image mode, irrespective of calling
-@option{--wcsmode} or the default mode. In the first two cases, since
-you specify a central pixel, the crop box will be a square with an odd
-number of pixels on the side, so your desired pixel sits right in the
-center, see @ref{Blank pixels} on how to disable this for cases when
-the box exceeds the image size.
+The latter option (@option{--polygon}) is a higher-level method to define
+any convex polygon (with any number of vertices) with floating point
+values. Please see the description of this option in @ref{Invoking
+astimgcrop} for its syntax. It is available in both Image and WCS modes,
+hence, to read the vertices as pixel coordinates, @option{--imgmode} has to
+be called/activated.
+@end table
 
 @item WCS
-The Right ascension (RA) and Declination (Dec) of the objects in a
-catalog is used to define the central position of each postage
-stamp. In this mode, the width (@option{--wwidth}) is read in units of
-arc seconds and multiple images (tiles in a survey) can be input. If
-the objects are closer to the edge of the image than half the required
-width, other tiles (if they are present in the input files) are used
-to fill the empty space. The square output cropped box will have an
-odd number of pixels on the side.
+Use the World Coordinate System (WCS) information to define the crop, not
+pixel coordinates. In this mode, the width (@option{--wwidth}) is read in
+units of arc-seconds and multiple images (tiles in a survey) can be
+input. When the cropped region (defined by center or vertices) lies
+overlaps with multiple of the input images/tiles, the overlapping regions
+will be taken from the respective input (they will be stitched in the
+crop).
 
-In this mode, the input images do not necessarily have to be the same
-size, each individual tile can even be smaller than the final crop. In
-any case, any part of any of the input images which overlaps with the
-desired region will be used in the crop. Note that if there is an over
-lap, the pixels from the last input image read are going to be
-used. The input images all just have to be aligned with the celestial
-coordinates, see the caution note below.
+In this mode, the input images do not necessarily have to be the same size,
+they just need to have the same orientation and pixel resolution. Currently
+only orientation along the celestial coordinates is accepted, if your input
+has a different orientation you can use ImageWarp's @option{--align} option
+to align the image before cropping it (see @ref{ImageWarp}).
 
-Similar to the image mode, there are two sub-modes:
+Each individual input image/tile can even be smaller than the final
+crop. In any case, any part of any of the input images which overlaps with
+the desired region will be used in the crop. Note that if there is an over
+lap in the input images/tiles, the pixels from the last input image read
+are going to be used for the overlap (ImageCrop will not change pixel
+values, so it assumes your tiles have the same depth for example). There
+are multiple ways to define your cropped region as listed below.
 
-@itemize
+@table @asis
 
-@item
-Catalog (multiple crops). Similar to catalog mode in image mode. The
-RA and Dec column should be specified in the catalog (@option{--racol}
-and @option{--deccol}).
+@item Center of multiple crops (in a catalog)
+Similar to catalog mode in image mode, but @option{--wcsmode} has to be
+activated. The central RA and Dec value for each crop will be read from the
+@option{--racol} and @option{--deccol} columns of the input catalog. The
+square cropped box will have an odd number of pixels.
 
-@item
-Center (one crop). You can specify the center of only one crop box (no
-matter how many input images there are) with the options @option{--ra}
-and @option{--dec}. If it exists in the input images, it will be
-cropped similar to the catalog mode. If automatic output is triggered
-(you don't specify a file name for @option{--output}) and several of
-the input images are used to stitch and crop the region around the
-central point, the name of the first input will be used in automatic
-output, see @ref{Automatic output}.
+@item Center of a single crop (on the command-line)
+You can specify the center of only one crop box with the @option{--ra} and
+@option{--dec} options. If it exists in the input images, it will be
+cropped similar to the catalog mode.
 
-@end itemize
+@item Vertices of a single crop
+The @option{--polygon} option is a high-level method to define any convex
+polygon (with any number of vertices). Please see the description of this
+option in @ref{Invoking astimgcrop} for its syntax. It is available in both
+Image and WCS modes, hence, to read the vertices as RA and Dec coordinates,
+@option{--wcsmode} has to be called/activated.
+@end table
 
 @cartouche
 @noindent
 @strong{CAUTION:} In WCS mode, the image has to be aligned with the
-celestial coordinates, such that the first FITS axis is parallel
-(opposite direction) to the Right Ascension (RA) while the second FITS
-axis is parallel to the declination. If these conditions aren't met
-for an image, ImageCrop will warn you and abort. You have to use other
-tools to transform the image to the correct directions.
+celestial coordinates, such that the first FITS axis is parallel (opposite
+direction) to the Right Ascension (RA) and the second FITS axis is parallel
+to the declination. If these conditions aren't met for an image, ImageCrop
+will warn you and abort. You can use ImageWarp's @option{--align} option to
+align the input image with these coordinates, see @ref{ImageWarp}.
 @end cartouche
 
 @end table
 
-In short, if you don't specify a catalog, you have to specify box
-coordinates manually on the command-line. When you do specify a
-catalog, ImageCrop has to be in one of the two major modes
-(@option{--imgmode} or @option{--wcsmode}). Note that the single crop
-box parameters specified in the sub-modes will not be written to or
-read from the configuration file, they have to be specified on each
-execution.
+As a summary, if you don't specify a catalog, you have to define the
+cropped region manually on the command-line. Other than the
+@option{--polygon} option, the other methods to define a single crop are
+uniqe to each mode, so the mode options (@option{--imgmode} or
+@option{--wcsmode}) will be ignored. When using a catalog, or
+@option{--polygon}, the modes have to be specified to correctly interpret
+the values.
 
 
 @node Crop section syntax, Blank pixels, ImageCrop modes, ImageCrop
@@ -6652,7 +6668,7 @@ $ astimgcrop -I catalog.txt image.fits
 $ astimgcrop -W catalog.txt /mnt/data/COSMOS/*_drz.fits
 $ astimgcrop --section=10:*-10,10:*-10 --hdu=2 image.fits
 $ astimgcrop --ra=189.16704 --dec=62.218203 goodsnorth.fits
-$ astimgcrop --xc=568.342 --yc=2091.719 --iwidth=200 image.fits
+$ astimgcrop --xc=568.342 --yc=2091.719 --iwidth=201 image.fits
 @end example
 
 @noindent
@@ -6661,11 +6677,10 @@ shown above with @file{ASTRdata ...}. You can use shell expansions, for
 example @command{*} for this if you have lots of images in WCS mode. If the
 crop box centers are in a catalog, you also have to provide the catalog
 name as an argument. Alternatively, you have to provide the crop box
-parameters with command-line options. As in all Gnuastro programs, when an
-output is not explicitly set with the @option{--output} option, the output
-filename will be set automatically, see @ref{Automatic output}. For the
-full list of general options to all Gnuastro programs (including
-ImageCrop), please see @ref{Common options}.
+parameters with command-line options. See @ref{ImageCrop output} for how
+the output file name(s) can be specified. For the full list of general
+options to all Gnuastro programs (including ImageCrop), please see
+@ref{Common options}.
 
 Floating point numbers can be used to specify the crop region (except the
 @option{--section} option, see @ref{Crop section syntax}). In such cases,
@@ -6680,6 +6695,13 @@ should first translate the image by @mymath{-0.482} (note that the edge of
 a pixel is at integer multiples of @mymath{0.5}). So you should run
 ImageWarp with @option{--translate=-0.482,0} and then crop the warped image
 with @option{--section=13:81}.
+
+There are two ways to define the cropped region: with its center or its
+vertices. See @ref{ImageCrop modes} for a full description. In the former
+case, ImageCrop can check if the central region of the cropped image is
+indeed filled with data or is blank (see @ref{Blank pixels}), and not
+produce any output when the center is blank, see the description under
+@option{--checkcenter} for more.
 
 @cindex Asynchronous thread allocation
 When in catalog mode, ImageCrop will run in parallel unless you set
@@ -6766,27 +6788,30 @@ the syntax required for this input.
 
 @item -l
 @itemx --polygon
-(@option{=STR}) String of crop polygon vertices. Note that currently
-only convex polygons should be used. In the future we will make it
-work for all kinds of polygons. Convex polygons are polygons that do
-not have an internal angle more than 180 degrees. This option can be
-used both in the image and WCS modes. The rectangular region that
-completely encompasses the polygon will be kept and all the pixels
-that are outside of it will be removed.
+(@option{=STR}) String of crop polygon vertices. Note that currently only
+convex polygons should be used. In the future we will make it work for all
+kinds of polygons. Convex polygons are polygons that do not have an
+internal angle more than 180 degrees. This option can be used both in the
+image and WCS modes, see @ref{ImageCrop modes}. The cropped image will be
+the size of the rectangular region that completely encompasses the
+polygon. By default all the pixels that are outside of the polygon will be
+set as blank values (see @ref{Blank pixels}). However, if
+@option{--outpolygon} is called all pixels interal to the vertices will be
+set to blank.
 
-The syntax for the polygon vertices is similar to and simpler than
-that for @option{--section}. In short, the dimensions of each
-coordinate are separated by a comma (@key{,}) and each vertice is
-separated by a colon (@key{:}). You can define as many vertices as you
-like. If you would like to use space characters between the dimensions
-and vertices to make them more human-readable, then you have to put
-the value to this option in double quotation marks.
+The syntax for the polygon vertices is similar to, and simpler than, that
+for @option{--section}. In short, the dimensions of each coordinate are
+separated by a comma (@key{,}) and each vertice is separated by a colon
+(@key{:}). You can define as many vertices as you like. If you would like
+to use space characters between the dimensions and vertices to make them
+more human-readable, then you have to put the value to this option in
+double quotation marks.
 
-For example let's assume you want to work on the deepest part of the
+For example, let's assume you want to work on the deepest part of the
 WFC3/IR images of Hubble Space Telescope eXtreme Deep Field
-(HST-XDF). @url{https://archive.stsci.edu/prepds/xdf/, According to
-the webpage}@footnote{@url{https://archive.stsci.edu/prepds/xdf/}} the
-deepest part is contained within the coordinates:
+(HST-XDF). @url{https://archive.stsci.edu/prepds/xdf/, According to the
+webpage}@footnote{@url{https://archive.stsci.edu/prepds/xdf/}} the deepest
+part is contained within the coordinates:
 
 @example
 [ (53.187414,-27.779152), (53.159507,-27.759633),
@@ -6794,14 +6819,14 @@ deepest part is contained within the coordinates:
 @end example
 
 They have provided mask images with only these pixels in the WFC3/IR
-images, but what if you also need to work on the same region in the
-full resolution ACS images? Also what if you want to use the CANDELS
-data for the shallow region? Running ImageCrop with @option{--polygon}
-will easily pull out this region of the image for you irrespective of
-the resolution (if you have set the operating mode to WCS mode in your
-nearest configuration file, there is no need for @option{--wcsmode},
-you may also provide many FITS image or tiles and ImageCrop will
-stitch them all):
+images, but what if you also need to work on the same region in the full
+resolution ACS images? Also what if you want to use the CANDELS data for
+the shallow region? Running ImageCrop with @option{--polygon} will easily
+pull out this region of the image for you irrespective of the
+resolution. If you have set the operating mode to WCS mode in your nearest
+configuration file (see @ref{Configuration files}), there is no need to
+call @option{--wcsmode} on the command line. You may also provide many FITS
+images/tiles and ImageCrop will stitch them to produce this cropped region:
 
 @example
 $ astimgcrop --wcsmode desired-filter-image(s).fits        \
@@ -6844,13 +6869,13 @@ the vertical axis.
 
 @item -a
 @itemx --iwidth
-(@option{=INT}) Width the square box to crop in image mode in units of
-pixels. In order for the chosen central pixel to be in the center of
-the cropped image, the final width has to be an odd number, therefore
-if the value to this option is an even number, the final crop width
-will be one pixel larger in each dimension. If you want an even sided
-crop box, use the @option{--section} option to specify the boundaries
-of the box, see @ref{Crop section syntax}.
+(@option{=INT}) Width of the cropped region in units of pixels when the
+crop is defined by its center in Image mode (see @ref{ImageCrop modes}). In
+order for the chosen central pixel to be in the center of the cropped
+image, this option only accepts an odd number (an error will be given if
+its even). If you want an even sided crop, you can run ImageCrop afterwards
+with @option{--section=":*-1,:*-1"} or @option{--section=2:,2:} (depending
+on which side you don't need), see @ref{Crop section syntax}.
 
 @item -f
 @itemx --racol
@@ -6876,18 +6901,26 @@ Output options:
 @item -c
 @itemx --checkcenter
 @cindex Check center of crop
-(@option{=INT}) Box size of region in the center of the image to check
-in units of pixels. This is only used in WCS mode. Because surveys
-don't often have a clean square or rectangle shape, some of the pixels
-on the sides of the surveys don't have any data and are commonly
-filled with zero valued pixels.
+(@option{=INT}) Box width (odd number of pixels) of region in the center of
+the image to check for blank values. If the value to this option is zero,
+no checking is done. This option is only relevant when the cropped
+region(s) are defined by their center (not by the vertices, see
+@ref{ImageCrop modes}). If any of the pixels in this central region of a
+crop (defined by its center) are blank, then it will not be created.
 
-If the RA and Dec of any of the targets specified in the catalog fall
-in such regions, that cropped image will be useless! Therefore with
-this option, you can specify a width of a small box (3 pixels is often
-good enough) around the central pixel of the cropped image. If all the
-pixels in this small box have the value of zero, no cropped image will
-be created and this object will be flagged in the final log file.
+Because survey regions don't often have a clean square or rectangle shape,
+some of the pixels on the sides of the survey FITS image don't commonly
+have any data and are blank (see @ref{Blank pixels}). So when the catalog
+was not generated from the input image, it often happens that the image
+does not have data over some of the points.
+
+When the given center of a crop falls in such regions and this option has a
+non-zero, odd value, no crop will be created. Therefore with this option,
+you can specify a width of a small box (3 pixels is often good enough)
+around the central pixel of the cropped image. You can check which crops
+were created and which weren't from the command-line (if @option{--quiet}
+was not called, see @ref{Operating modes}), or in ImageCrop's log file (see
+@ref{ImageCrop output}).
 
 @item -p
 @itemx --suffix
@@ -6937,32 +6970,43 @@ Operate in WCS mode. See explanations for @option{--imgmode}.
 
 @node ImageCrop output,  , ImageCrop options, Invoking astimgcrop
 @subsubsection ImageCrop output
-When a catalog is given, the value of @option{--output} (see
-@ref{Common options}) will be seen as the directory to store the
-output cropped images. In such cases, the outputs will consist of two
-parts: a variable part (the row number of each target starting from 1)
-along with a fixed string which you can set with the @option{--suffix}
-option. Note that in catalog mode, only one image can be input.
 
-When the crop box is specified on the command-line, the value to
-@option{--output} will be used as a file name. If no output is
-specified or if it is a directory, the output file name will follow
-the automatic output names of Gnuastro, see @ref{Automatic output}
-for the input image.
+The value given to @option{--output} option will depend on how many crops
+were created, see @ref{ImageCrop modes}:
 
-The header of each output cropped image will contain the names of the
-input image(s) it was cut from. If a name is longer than the 70
-character space that the FITS standard allows for header keyword
-values, the name will be cut into several keywords from the nearest
-slash (@key{/}). The keywords have the following format:
-@command{ICFn_m}. Where @command{n} is the number of the image used in
-this crop and @command{m} is the part of the name. Following the name
-is another keyword named @command{ICFnPIX} which shows the pixel range
-from that input image in the same syntax as @ref{Crop section syntax}.
+@itemize
+@item
+When a catalog is given, the value of the @option{--output} (see
+@ref{Common options}) will be read as the directory to store the output
+cropped images. Hence if it doesn't alread exist, ImageCrop will abort with
+an error of a ``No such file or directory'' error. The crop file names will
+consist of two parts: a variable part (the row number of each target
+starting from 1) along with a fixed string which you can set with the
+@option{--suffix} option.
+
+@item
+When only one crop is desired, the value to @option{--output} will be read
+as a file name. If no output is specified or if it is a directory, the
+output file name will follow the automatic output names of Gnuastro, see
+@ref{Automatic output}: The string given to @option{--suffix} will be
+replaced with the @file{.fits} suffix of the input.
+@end itemize
+
+The header of each output cropped image will contain the names of the input
+image(s) it was cut from. If a name is longer than the 70 character space
+that the FITS standard allows for header keyword values, the name will be
+cut into several keywords from the nearest slash (@key{/}). The keywords
+have the following format: @command{ICFn_m} (for ImageCrop File). Where
+@command{n} is the number of the image used in this crop and @command{m} is
+the part of the name (it can be broken into multiple keywords). Following
+the name is another keyword named @command{ICFnPIX} which shows the pixel
+range from that input image in the same syntax as @ref{Crop section
+syntax}. So this string can be directly given to the @option{--section}
+option later.
 
 Once done, a log file will be created in the current directory named
-@file{astimgcrop.log}. For each input row, this file will have three
-columns:
+@file{astimgcrop.log}. This file will have three columns and the same
+number of rows as the number of cropped images.
 
 @enumerate
 @item
@@ -6970,17 +7014,20 @@ The cropped image file name for that row.
 @item
 The number of input images that were used to create that image.
 @item
-A @code{0} if the central few pixels (value to the
-@option{--checkcenter} option) are blank and @code{1} otherwise.
+A @code{0} if the central few pixels (value to the @option{--checkcenter}
+option) are blank and @code{1} if they aren't. When the crop was not
+defined by its center (see @ref{ImageCrop modes}), or
+@option{--checkcenter} was given a value of 0 (see @ref{Invoking
+astimgcrop}), the center will not be checked and this column will be given
+a value of @code{-1}.
 @end enumerate
 
-There are also comments on the top explaining basic information about
-the run. If the log file cannot be created (for example you don't have
-write permission in the directory you are running ImageCrop in) or you
-have specifically asked for no log file (with the @option{--nolog}
-option), then a log file will not be created (unless
-@option{--individual} is called). The same columns will be printed in
-verbose mode on the command-line for each row.
+There are also comments on the top of the log file explaining basic
+information about the run and descriptions for the columns. If the log file
+cannot be created (for example you don't have write permission in the
+directory you are running ImageCrop in) or you have specifically asked for
+no log file (with the @option{--nolog} option), then a log file will not be
+created (unless @option{--individual} is called).
 
 
 
